--- a/index.html
+++ b/index.html
@@ -9,16 +9,43 @@
 </head>
 
 <body>
-    <div class="content">
-        <h1>Tomek Horszczaruk</h1>
-        <ul id="menu">
-            <li><a href="">ABOUT ME</a></li>
-            <li><a href="">RESUME</a></li>
-            <li><a href="https://www.linkedin.com/in/tomek-horszczaruk/" target="_blank">LINKEDIN</a></li>
-            <li><a href="https://github.com/thomson008" target="_blank">GITHUB</a></li>
-        </ul>
+    <div class="container">
+        <section id="home">
+            <div class="distort" title="Tomek Horszczaruk">
+                Tomek Horszczaruk
+            </div>
+            <ul class="menu">
+                <li><a href="#about">ABOUT ME</a></li>
+                <li><a href="">RESUME</a></li>
+            </ul>
+            <ul class="menu">
+                <li><a href="https://www.linkedin.com/in/tomek-horszczaruk/" target="_blank">LINKEDIN</a></li>
+                <li><a href="https://github.com/thomson008" target="_blank">GITHUB</a></li>
+                <li><a href="#contact">CONTACT</a></li>
+            </ul>
+        </section>
+        <section id="about">
+            <h2>About me</h2>
+            <img src="pobrane.png" class="responsive" />
+            <p class="lead">Hi, my name is Tomek.</p>
+            <p class="responsive">I am a 4th year Electronics and Computer Science student at The University of Edinburgh. Currently I am working as a Software Development Engineer intern at Amazon. A few times per week, I also lead lab and tutorial sessions in subjects such
+                as Foundations of Data Science or Object Oriented Programming for younger students at my school.</p>
+            <br>
+            <p class="responsive">My main scientific interests include natural language processing, speech recognition and digital signal processing.</p>
+            <br>
+            <p class="responsive">In my free time, I play electric and acoustic guitar. I'm a big fan of racing of all sorts, but Formula 1 in particular. I like running long distances (10km+) and playing football occasionally.</p>
+            <br>
+            <p class="responsive">If you are interested in working with me, or just want to ask some questions, please get in touch using my
+                <a href="#contact" class="link">contact details</a>.
+            </p>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p class="lead ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, quis!</p>
+        </section>
     </div>
 
+    <script src="index.js "></script>
 </body>
 
 </html>
