Made mobile friendly

--- a/index.html
+++ b/index.html
@@ -4,44 +4,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tomek Horszczaruk</title>
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
     <div class="container">
         <section id="home">
-            <div class="distort" title="Tomek Horszczaruk">
-                Tomek Horszczaruk
-            </div>
+            <h1 class="distort" title="Tomek Horszczaruk"><a id="title" href="#about">Tomek Horszczaruk</a></h1>
             <ul class="menu">
                 <li><a href="#about">ABOUT ME</a></li>
                 <li><a href="">RESUME</a></li>
             </ul>
-            <ul class="menu">
+            <ul class="menu" id="myHeader">
                 <li><a href="https://www.linkedin.com/in/tomek-horszczaruk/" target="_blank">LINKEDIN</a></li>
                 <li><a href="https://github.com/thomson008" target="_blank">GITHUB</a></li>
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
         </section>
         <section id="about">
-            <h2>About me</h2>
+            <h2 class="distort" title="About me">About me</h2>
             <img src="pobrane.png" class="responsive" />
             <p class="lead">Hi, my name is Tomek.</p>
-            <p class="responsive">I am a 4th year Electronics and Computer Science student at The University of Edinburgh. Currently I am working as a Software Development Engineer intern at Amazon. A few times per week, I also lead lab and tutorial sessions in subjects such
-                as Foundations of Data Science or Object Oriented Programming for younger students at my school.</p>
+            <p class="responsive">I am a 4th year Electronics and Computer Science student at <a href="https://www.ed.ac.uk/" class="link"> The University of Edinburgh</a>. I come from Poland but most of the time I am in Edinburgh, Scotland. Currently I am working as a Software
+                Development Engineer intern at Amazon. A few times per week, I also lead lab and tutorial sessions in courses such as Foundations of Data Science or Object Oriented Programming for younger students at my school.</p>
             <br>
             <p class="responsive">My main scientific interests include natural language processing, speech recognition and digital signal processing.</p>
             <br>
-            <p class="responsive">In my free time, I play electric and acoustic guitar. I'm a big fan of racing of all sorts, but Formula 1 in particular. I like running long distances (10km+) and playing football occasionally.</p>
+            <p class="responsive">In my free time, I play electric and acoustic guitar. Sometimes I post some music I play on my <a href="https://www.youtube.com/user/tomek0898" class="link">YoutTube channel</a>. I'm a big fan of racing of all sorts, but Formula 1 in particular.
+                I like running long distances (10km+) and playing football occasionally.</p>
             <br>
             <p class="responsive">If you are interested in working with me, or just want to ask some questions, please get in touch using my
-                <a href="#contact" class="link">contact details</a>.
+                <a href="#contact" class="link">contact info</a>.
             </p>
         </section>
         <section id="contact">
-            <h2>Contact</h2>
-            <p class="lead ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, quis!</p>
+            <h2 class="distort" title="Contact">Contact</h2>
+            <p>
+                Email: <a href="mailto:tkhorszczaruk@gmail.com" class="link" target="_blank">tkhorszczaruk@gmail.com</a>
+            </p>
+            <p>
+                LinkedIn: <a href="https://www.linkedin.com/in/tomek-horszczaruk/" target="_blank" class="link">tomek-horszczaruk</a>
+            </p>
         </section>
     </div>
 
