--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="container">
         <section id="home">
-            <h1 class="distort" title="Tomek Horszczaruk"><a id="title" href="#about">Tomek Horszczaruk</a></h1>
+            <h1 class="distort" title="Tomek H."><a id="title" href="#about">Tomek H.</a></h1>
             <ul class="menu">
                 <li><a href="#about">ABOUT ME</a></li>
-                <li><a href="">RESUME</a></li>
+                <li><a href="Tomek_Horszczaruk_CV.pdf">RESUME</a></li>
             </ul>
             <ul class="menu" id="myHeader">
                 <li><a href="https://www.linkedin.com/in/tomek-horszczaruk/" target="_blank">LINKEDIN</a></li>
