--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 class="distort" title="Tomek H."><a id="title" href="#about">Tomek H.</a></h1>
             <ul class="menu">
                 <li><a href="#about">ABOUT ME</a></li>
-                <li><a href="Tomek_Horszczaruk_CV.pdf">RESUME</a></li>
+                <li><a href="#resume">RESUME</a></li>
             </ul>
             <ul class="menu" id="myHeader">
                 <li><a href="https://www.linkedin.com/in/tomek-horszczaruk/" target="_blank">LINKEDIN</a></li>
@@ -35,13 +35,63 @@
                 <a href="#contact" class="link">contact info</a>.
             </p>
         </section>
+        <section id="resume">
+            <h2 class="distort" title="Resume">Resume</h2>
+            <div class="cv_section">
+                <p class="lead">Education</p>
+                <a href="https://www.ed.ac.uk/" class="link">The University of Edinburgh</a>
+                <p>MEng Electronics and Computer Science [2017 - 2022]</p>
+                <br>
+                <a href="https://www.kopernik.edu.pl/" class="link" target="_blank">Copernicus Bilingual High School in Warsaw</a>
+                <p>Higher level: Mathematics, Physics, English [2014 - 2017]</p>
+            </div>
+            <br>
+            <div class="cv_section">
+                <p class="lead">Relevant courses</p>
+                <p>Electronics: Digital System Design, Signals and Communication Systems, Microelectronics, Engineering Software</p>
+                <p>Computer Science: Computer Systems, Software Testing, Applied Machine Learning, Computer Security, Algorithms and Data Structures, Object-Oriented Programming</p>
+            </div>
+            <br>
+            <div class="cv_section">
+                <p class="lead">Experience</p>
+                <a href="http://www.gdansk-amazon.com/" class="link" target="_blank">Amazon Development Center Poland</a>
+                <p class="comment">/** <br> * Worked on a CLI of a service for deploying and scaling NLU models for Alexa<br> * Currently member of Alexa AI - Natural Understanding team as a part-time working student<br>*/
+                </p>
+                <p>Software Development Engineer Intern [June 2020 - now]</p>
+                <p>Gdańsk, Poland</p>
+                <br>
+                <a href="https://www.ed.ac.uk/" class="link" target="_blank">The University of Edinburgh</a>
+                <p>Tutor / Lab Demonstrator [September 2019 - now]</p>
+                <p>Edinburgh, United Kingdom</p>
+                <br>
+                <a href="http://www.citibank.com/emeaservicecenter/poland/csc-poland.htm" class="link" target="_blank">Citibank Europe</a>
+                <p>IT and Data Analysis Intern [July 2019 - September 2019]</p>
+                <p>Warsaw, Poland</p>
+                <br>
+                <a href="https://www.lionbridge.com/" class="link" target="_blank">Lionbridge Poland</a>
+                <p>Software QA Tester [August 2018 - September 2018]</p>
+                <p>Warsaw, Poland</p>
+                <br>
+                <a class="link">Immunity Systems</a>
+                <p>PCB Designer [June 2018 - August 2018]</p>
+                <p>Warsaw, Poland</p>
+            </div>
+            <br>
+            <div class="cv_section">
+                <p class="lead">Technical skills</p>
+                <p>Languages: Java, Kotlin, Python, C, Matlab, JavaScript</p>
+                <p>Frameworks: ReactJS, Spring Boot</p>
+                <p>Tools: Apache Maven, Git, IntelliJ, VS Code, Eclipse</p>
+                <p>Libraries: numpy, SciPy, Pandas, scikit-learn, nltk</p>
+            </div>
+        </section>
         <section id="contact">
-            <h2 class="distort" title="Contact">Contact</h2>
+            <h2 class="distort " title="Contact ">Contact</h2>
             <p>
-                Email: <a href="mailto:tkhorszczaruk@gmail.com" class="link" target="_blank">tkhorszczaruk@gmail.com</a>
+                Email: <a href="mailto:tkhorszczaruk@gmail.com " class="link" target="_blank">tkhorszczaruk@gmail.com</a>
             </p>
             <p>
-                LinkedIn: <a href="https://www.linkedin.com/in/tomek-horszczaruk/" target="_blank" class="link">tomek-horszczaruk</a>
+                LinkedIn: <a href="https://www.linkedin.com/in/tomek-horszczaruk/ " target="_blank" class="link">tomek-horszczaruk</a>
             </p>
         </section>
     </div>
