--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <img src="pobrane.png" class="responsive" />
             <p id="intro">Hi, my name is Tomek.</p>
             <div id="description">
-                <p>I am a 4th year Electronics and Computer Science student at <a href="https://www.ed.ac.uk/" class="link" target="_blank"> The University of Edinburgh</a>. I come from Poland but most of the time I am in Edinburgh, Scotland. Currently I am working as a
-                    Software Development Engineer intern at Amazon. A few times per week, I also lead lab and tutorial sessions in courses such as Foundations of Data Science or Object Oriented Programming for younger students at my school.</p>
+                <p>I am a 4th year Electronics and Computer Science student at <a href="https://www.ed.ac.uk/" class="link" target="_blank"> The University of Edinburgh</a>. I come from Poland but most of the time I am in Edinburgh, Scotland. Currently I
+                    am working as a Software Development Engineer intern at Amazon. A few times per week, I also lead lab and tutorial sessions in courses such as Foundations of Data Science or Object Oriented Programming for younger students at my school.</p>
                 <p>My main scientific interests include natural language processing, speech recognition and digital signal processing.</p>
-                <p>In my free time, I play electric and acoustic guitar. Sometimes I post some music I play on my <a href="https://www.youtube.com/user/tomek0898" class="link" target="_blank">YouTube channel</a>. I'm a big fan of racing of all sorts, but Formula 1 in particular.
-                    I like running long distances (10km+) and playing football occasionally.</p>
+                <p>In my free time, I play electric and acoustic guitar. Sometimes I post some music I play on my <a href="https://www.youtube.com/user/tomek0898" class="link" target="_blank">YouTube channel</a>. I'm a big fan of racing of all sorts, but
+                    Formula 1 in particular. I like running long distances (10km+) and playing football occasionally.</p>
                 <p>If you are interested in working with me, or just want to ask some questions, please get in touch using my
                     <a href="#contact" class="link">contact info</a>.
                 </p>
