--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </section>
         <section id="about">
             <h2 class="distort" title="About me">About me</h2>
-            <img src="me.jpg" class="responsive" />
+            <img src="me2.jpg" class="responsive" />
             <p id="intro">Hi, my name is Tomek.</p>
             <div id="description">
                 <p>I am a 4th year Electronics and Computer Science student at <a href="https://www.ed.ac.uk/" class="link" target="_blank"> The University of Edinburgh</a>. I come from Poland but most of the time I am in Edinburgh, Scotland. Currently I
